edit apache image

--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: web
-        image: apache:stable
+        image: httpd:stable
         ports:
         - containerPort: 80
